moving sjue.net to github

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:        niffdy
+title:        sjue.net a niffdy place to be
 tagline:      'living your legacy'
 description:  'a niffdy place to be'
-url:          http://niffdy.com
+url:          http://sjue.net
 version:      .001
 author:
   name:       'Brad Sjue'
