--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:        sjue.net a niffdy place to be
+title:        a niffdy place to be
 tagline:      'living your legacy'
 description:  'a niffdy place to be'
 url:          http://sjue.net
