--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:        'sjue.net'
 tagline:      'living your legacy'
-description:  'think love act'
+description:  'think-love-act'
 url:          http://sjue.net
 version:      .003
 author:
